--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       
       - name: Env variables
         run: |
-          echo "VITE_APIURL=${{ secrets.VITE_APIURL }}" >> .env.production
+          echo "VITE_APIURL=${{ secrets.VITE_API_URL }}" >> .env.production
           echo "VITE_MODE=Prod Mode" >> .env.production
 
       - name: Build
